fixed screen bleeding on mobile devices

--- a/app/assets/stylesheets/node.css
+++ b/app/assets/stylesheets/node.css
@@ -16,3 +16,44 @@ th {
 tr:nth-child(even) {
   background-color: #f2f2f2
 }
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+	td:nth-of-type(1):before { content: "Name"; }
+	td:nth-of-type(2):before { content: "Led State"; }
+	td:nth-of-type(3):before { content: "Button safe"; }
+	td:nth-of-type(4):before { content: "Led Index"; }
+	td:nth-of-type(5):before { content: "Led Color"; }
